# dishka_guide

./: README.md  pyproject.toml
src/: implementation.py  interfaces.py  providers.py  usage.py
